# vmrp-ohos

./: .gitignore  .gitmodules  README.md  build-profile.json5  hvigorfile.ts
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: arm-alloc-oob-crash-fix.md  cookie-page-restore-progress.md  cookie-return-page-state-analysis.md  cookie-start-submrp-fix.md  exception-heap-recovery.md  hds-navigation-immersive-guide.md  immersive-layout-guide.md  motion-chip-adaptation.md  mutichannel-audio-fix.md  network-download-speedup.md  platex-memory-extension.md  skyengine-image-api.md  timer-interval-override-fix.md  vibration-adaptation.md
entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  vmrp_audio.cpp  vmrp_audio.h  vmrp_engine.cpp  vmrp_engine.h  vmrp_napi.cpp  vmrp_renderer.cpp  vmrp_renderer.h
entry/src/main/cpp/include/: skyengine_api.h  vmrp_api.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/common/: AvoidData.ets  GlassPanel.ets  HapticManager.ets  ImmersiveLightWrapper.ets
entry/src/main/ets/components/: EmulatorControls.ets  GamepadBinding.ets  GamepadHelpers.ets  SettingsControls.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: FavoriteStore.ets  MrpListModel.ets
entry/src/main/ets/pages/: Emulator.ets  Index.ets  Settings.ets
entry/src/main/ets/vmrp/: MrpInfo.ets  VmrpAssets.ets  VmrpEngine.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: route_map.json
entry/src/main/resources/dark/element/: color.json
entry/src/main/resources/rawfile/mythroad/app240320/0/: config.sav  mdsm.lst
entry/src/main/resources/rawfile/mythroad/app240320/sgm/: 10915548.seg  10915549.seg  10915550.seg  10915551.seg  10915552.seg  10915553.seg  10915554.seg  10915555.seg  10915556.seg  10915557.seg  10915558.seg  10915559.seg  10915560.seg  10915561.seg  10915562.seg  10915563.seg  10915564.seg  10915565.seg  10915566.seg  10915567.seg  10915568.seg  10915569.seg
entry/src/main/resources/rawfile/mythroad/gwy/: gui.mrp  pmsg.mrp  reglogin.mrp  resmng.mrp  rollscr.mrp  svrctrl.mrp
entry/src/main/resources/rawfile/mythroad/gwy/gifs/: gifinfo.idx11  gifinfo.idx13  gifinfo.idx15  gifinfo.idx21  gifinfo.idx23  gifinfo.idx24  gifinfo.idx34  gifinfo.idx40  gifinfo.idx41  gifinfo.idx42  gifinfo.idx44  gifinfo.idx55  gifinfo.idx57  gifinfo.idx6  gifinfo.idx61  gifinfo.idx73  gifinfo.idx84  gifinfo.idx87  gifinfo.idx93  gifinfo.idx99
entry/src/main/resources/rawfile/mythroad/plugins/: addons.mrp  advbar.mrp  freecurr.mrp
entry/src/main/resources/rawfile/mythroad/system/: statis.sys
entry/src/main/resources/rawfile/mythroad/system/ntp/: pyone.sys
ohos_src/: ohos_image_decode.cpp  ohos_image_decode.h
scripts/: CMakeLists.txt  build_libvmpp_ohos.bat  test_cookie_submrp.sh  test_op6120.sh
vmrp/: .gitattributes
vmrp/docs/: arm-ext-game-ext-sdk-table.md  arm-ext-game-ext-submrp-load.md  ohos-accelerometer-design.md
vmrp/src/: arm_ext_executor.c  native_dsm_funcs.c  vmrp_api.c
vmrp/src/include/: arm_ext_executor.h  arm_ext_internal.h  vmrp_api.h
vmrp/src/mythroad/: dsm.c  mythroad.c  mythroad_mini.c
vmrp/src/mythroad/include/: dsm.h  mrporting.h
vmrp/test/gghjt/: download-end-confirm-continue.sh  pay-normal-back.sh
vmrp/test/html2sky/网盘搜索引擎v1.3/: head.inc.php  item.php  mo.php  readme.txt  view.php
